Adicionado css e mais divs pra estrutura

--- a/css/style.css
+++ b/css/style.css
@@ -1,1 +1,23 @@
 /* CSS do site*/
+* {
+    font-family: Arial, Helvetica, sans-serif;
+    font-size: 16;
+    font-weight: bold;
+}
+
+#menu {
+    border: 2px solid #000000;
+    box-shadow: 1px 1px 1px #000000
+    ;
+}
+#container {
+    border: 2px solid #000000;
+    box-shadow: 1px 1px 1px #000000;
+
+}
+
+#social {
+    border: 2px solid #000000;
+    box-shadow: 1px 1px 1px #000000;
+
+}
