--- a/css/style.css
+++ b/css/style.css
@@ -3,21 +3,49 @@
     font-family: Arial, Helvetica, sans-serif;
     font-size: 16;
     font-weight: bold;
+    box-sizing: border-box;
 }
 
 #menu {
+    display: flex;
+    flex-direction: row-reverse;
     border: 2px solid #000000;
-    box-shadow: 1px 1px 1px #000000
-    ;
+    box-shadow: 1px 1px 1px #000000;
 }
+#menu li {
+    float: left;
+    background-color: aqua;
+    padding: 1vw 3vh;
+    border: 2px solid #000000;
+    border-radius: 5px;
+    display: block;
+    margin: 4vh 1vw;
+}
+
 #container {
     border: 2px solid #000000;
     box-shadow: 1px 1px 1px #000000;
+    margin: 0 auto;
+}
+#welcome {
+    width: 50vw;
+    height: 50vh;
+    padding: 10vh 10vw;
 
+}
+#development {
+    width: 50vw;
+    height: 50vh;
+    padding: 10vh 10vw;
+}
+#photography {
+    width: 50vw;
+    height: 50vh;
+    padding: 10vh 10vw;
 }
 
 #social {
     border: 2px solid #000000;
     box-shadow: 1px 1px 1px #000000;
-
+    padding: 5vw 5vh;
 }
