--- a/css/style.css
+++ b/css/style.css
@@ -5,12 +5,27 @@
     font-weight: bold;
     box-sizing: border-box;
 }
+body {
+    background-color: #000000;
+}
+
+hr {
+    background: linear-gradient(10deg, transparent, rgb(252, 95, 4), transparent);
+    width: 100%;
+    height: 3px;
+    border: none;
+    margin-bottom: 3vh;
+}
+h1,h2, h3,h4,p {
+    color: #ffffff;
+}
 
 #menu {
     display: flex;
     flex-direction: row-reverse;
     border: 2px solid #000000;
     box-shadow: 1px 1px 1px #000000;
+    background:linear-gradient(180deg, #2b2b2b, rgb(0, 0, 0), #000000);
 }
 #menu li {
     float: left;
@@ -25,27 +40,55 @@
 #container {
     border: 2px solid #000000;
     box-shadow: 1px 1px 1px #000000;
-    margin: 0 auto;
+    margin: auto;
+    position: relative;
+    overflow: hidden;
+    justify-content: center;
+
 }
 #welcome {
-    width: 50vw;
-    height: 50vh;
+    width: auto;
+    height: auto;
     padding: 10vh 10vw;
+    background-attachment: scroll;
 
 }
 #development {
-    width: 50vw;
+    width: 100%;
     height: 50vh;
     padding: 10vh 10vw;
+    background-attachment: fixed;
 }
 #photography {
-    width: 50vw;
+    width: 100%;
     height: 50vh;
-    padding: 10vh 10vw;
+    padding: 5vh 5vw;
+    background-attachment: fixed;
 }
 
 #social {
-    border: 2px solid #000000;
-    box-shadow: 1px 1px 1px #000000;
+    width: 100%;
+    height: 10vh;
     padding: 5vw 5vh;
+    background-attachment: fixed;
+}
+
+
+/* backgrounds  */
+
+#welcome {
+    background-image: url(../img/welcome-background.jpg);
+    background-size: cover;
+}
+#development {
+    background-image: url(../img/development-background.jpg);
+    background-size: cover;
+}
+#phography {
+    background-image: url(../img/photo-background.jpg);
+    background-size: cover;
+}
+#social {
+    background-image: url(../img/social-backgroung.jpg);
+    background-size: cover;
 }
