--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,12 @@
 /* CSS do site*/
 * {
     font-family: Arial, Helvetica, sans-serif;
-    font-size: 16;
-    font-weight: bold;
     box-sizing: border-box;
+    padding: 0;
+    margin: 0 auto;
 }
 body {
-    background-color: #000000;
+    background-color: #fcf9f9;
 }
 
 hr {
@@ -14,27 +14,52 @@ hr {
     width: 100%;
     height: 3px;
     border: none;
-    margin-bottom: 3vh;
 }
-h1,h2, h3,h4,p {
+h1 {
+    color: #ffffff;
+    font-size: 5rem;
+}
+h2 {
+    color: #ffffff;
+    font-size: 3rem;
+}
+h3 {
+    color: #ffffff;
+    font-size: 3rem;
+}
+h4 {
     color: #ffffff;
 }
 
+#container p {
+    color: #ffffff;
+}
+
+button {
+    color: rgb(0, 0, 0);
+    width: 10vw;
+    height: 6vh;
+    border: 2px solid #000000;
+    border-radius: 10px;
+}
+
 #menu {
-    display: flex;
-    flex-direction: row-reverse;
+    margin: 0;
+    text-align: right;
     border: 2px solid #000000;
     box-shadow: 1px 1px 1px #000000;
     background:linear-gradient(180deg, #2b2b2b, rgb(0, 0, 0), #000000);
 }
+
+#menu ul li {
+    display: inline-block;
+
+}
 #menu li {
-    float: left;
-    background-color: aqua;
-    padding: 1vw 3vh;
+    padding: 1vw 1vh;
     border: 2px solid #000000;
     border-radius: 5px;
-    display: block;
-    margin: 4vh 1vw;
+    background-color: #ffffff;
 }
 
 #container {
@@ -44,51 +69,60 @@ h1,h2, h3,h4,p {
     position: relative;
     overflow: hidden;
     justify-content: center;
-
 }
-#welcome {
+
+
+.welcome {
     width: auto;
-    height: auto;
+    height: 60vh;
     padding: 10vh 10vw;
-    background-attachment: scroll;
-
 }
-#development {
+
+.development {
     width: 100%;
     height: 50vh;
     padding: 10vh 10vw;
-    background-attachment: fixed;
-}
-#photography {
-    width: 100%;
-    height: 50vh;
-    padding: 5vh 5vw;
-    background-attachment: fixed;
 }
 
-#social {
+.photography {
+    width: 100%;
+    height: 50vh;
+    padding: 5vh 10vw;
+}
+
+.social {
     width: 100%;
     height: 10vh;
-    padding: 5vw 5vh;
-    background-attachment: fixed;
+    padding: 5vh 10vw;
+}
+.footer {
+    background-color: black;
+}
+p {
+    text-align: center;
+    color: white;
 }
 
 
 /* backgrounds  */
 
-#welcome {
-    background-image: url(../img/welcome-background.jpg);
+.welcome {
+    background-image: url(../img/welcome-bg.png);
     background-size: cover;
+    background-attachment: scroll;
 }
-#development {
-    background-image: url(../img/development-background.jpg);
+.development {
+    background-image: url(../img/development-bg.png);
     background-size: cover;
+    background-attachment: fixed;
 }
-#phography {
-    background-image: url(../img/photo-background.jpg);
+.photography {
+    background-image: url(../img/photo-bg.png);
     background-size: cover;
+    background-attachment: fixed;
 }
-#social {
-    background-image: url(../img/social-backgroung.jpg);
+.social {
+    background-image: url(../img/social-bg.png);
     background-size: cover;
+    background-attachment: scroll;
 }
