--- a/css/style.css
+++ b/css/style.css
@@ -12,12 +12,13 @@ body {
 .header {
     background: linear-gradient(180deg, transparent 85%, rgba(255, 51, 0, 0.4));
     display: flex;
-    flex-wrap: wrap;
+    flex-wrap: nowrap;
     align-items: center;
     padding: 20px;
-    justify-content: space-between;
     max-height: 7vh;
     align-content: center;
+    justify-content: space-between;
+
 }
 
 /* ---------- logo ----------*/ 
@@ -26,7 +27,7 @@ body {
     max-height: 5rem;
     border-radius: 10rem;
     margin-left: 10vh;
-    border: 2px solid tomato;
+    border: 2px solid rgb(253, 97, 69);
     align-content: center;
 }
 
@@ -34,6 +35,7 @@ body {
 .menu {
     display: flex;
     margin-left: 30vw;
+
 }
 
 ul {
@@ -75,8 +77,6 @@ ul {
     box-shadow: 0 0 1em rgb(247, 92, 20);
 }
 /* ---------- fim do menu ---------- */  
-
-
 
 
 
@@ -154,7 +154,7 @@ button:hover {
 }
 
 .development {
-    width: 100%;
+    width: auto;
     height: 50vh;
     padding: 10vh 10vw;
 }
@@ -166,10 +166,9 @@ button:hover {
 }
 
 .social {
-    width: 100%;
+    width: auto;
     height: 30vh;
     padding: 5vh 10vw;
-    border: 5px solid tomato;
 
 }
 .social-items {
@@ -177,7 +176,7 @@ button:hover {
     flex-wrap: wrap;
 }
 .social-btn {
-    color: white;
+    color: #ffffff;
     font-size: 2.5rem;
     margin-left: 10rem; 
     margin-right: 5rem; 
@@ -191,14 +190,14 @@ button:hover {
 
 /* ---------- rodapé ---------- */ 
 .footer {
-    background-color: black;
+    background-color: #000000;
     width: 100%;
     height: 5vh;
 }
 
 .footer p {
     text-align:center;
-    color: white;
+    color:#ffffff;
     font-size: 0.7rem;
     position: relative;
     top: 1vh;
@@ -206,7 +205,6 @@ button:hover {
 
 
 /* ---------- backgrounds ----------*/
-
 .welcome {
     background-image: url(../img/welcome-bg.png);
     background-size: cover;
